Updated links for header
-Added a uiService
-Changed folder structure of pages
-Header links now update upon log in and out
-Error page for 404

--- a/frontend/src/app/components/shared/header/header.component.html
+++ b/frontend/src/app/components/shared/header/header.component.html
@@ -1,8 +1,8 @@
 <p>header works!</p>
 
-<p><a routerLink="/">Landing</a></p>
+<p><a routerLink="/landing">Landing</a></p>
 <p><a routerLink="/configurator">Configurator</a></p>
-<p><a routerLink="/cameron">Profile</a></p>
+<p><a routerLink="/profile/{{username}}">Profile</a></p>
 <p><a routerLink="/display">Display</a></p>
 
 <app-login></app-login>
