--- a/frontend/src/app/pages/public/landing/landing.component.html
+++ b/frontend/src/app/pages/public/landing/landing.component.html
@@ -1,1 +1,10 @@
-<p>landing works!</p>
+<section>
+  <img src="../../../../assets/4k-side-on.jpg" alt="">
+  <div class="container">
+    <h1 class="text">S90</h1>
+    <h2 class="text">Elegance <br>
+      & <br>
+      Class
+    </h2>
+  </div>
+</section>
