--- a/frontend/src/app/components/shared/header/header.component.html
+++ b/frontend/src/app/components/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <section [ngClass]="{'border-bottom': isSmall}" class="navbar">
-  <!-- Sort out the nav border -->
+  <!-- Render the nav border -->
   <div [ngClass]="{'border-right': !isSmall}"></div>
   <div [ngClass]="{'border-left': !isSmall}"></div>
 
