--- a/frontend/src/app/components/shared/header/header.component.scss
+++ b/frontend/src/app/components/shared/header/header.component.scss
@@ -1,33 +1,37 @@
-.navbar {
-  width: 100%;
-  height: 50px;
-  background-image: linear-gradient(to right, black, rgb(44, 44, 44), black);
-  opacity: 90%;
-  position: sticky;
-  top: 0;
-}
-
-@mixin nav-border {
+@mixin nav-border($deg) {
   width: 30%;
   height: 50px;
   border-bottom: 2px white solid;
   position: absolute;
   top: 0;
   z-index: -1;
+  transform: skew($deg);
 }
 
 .border-right {
-  @include nav-border;
+  @include nav-border(-45deg);
   border-right: 3px white solid;
   left: 50%;
-  transform: skew(-45deg);
 }
 
 .border-left {
-  @include nav-border;
+  @include nav-border(45deg);
   border-left: 3px white solid;
   right: 50%;
-  transform: skew(45deg);
+}
+
+.border-bottom {
+  border-bottom: 2px white solid;
+}
+
+.navbar {
+  z-index: 3;
+  width: 100vw;
+  height: 50px;
+  background-image: linear-gradient(to right, black, rgb(44, 44, 44), black);
+  opacity: 95%;
+  position: fixed;
+  top: 0;
 }
 
 .grid {
@@ -40,8 +44,4 @@
   letter-spacing: 0.4cm;
   margin-right: -0.4cm;
   font-size: 2.5rem;
-}
-
-.border-bottom {
-  border-bottom: 2px white solid;
 }
