--- a/frontend/src/app/components/shared/header/header.component.html
+++ b/frontend/src/app/components/shared/header/header.component.html
@@ -4,21 +4,20 @@
   <div [ngClass]="{'border-left': !isSmall}"></div>
 
   <!-- Nav options -->
-  <nav [ngClass]="{'container': !isSmall}" class="grid grid-3 text">
+  <nav [ngClass]="{'container': !isSmall}" class="grid text-large">
 
     <a [ngClass]="{'justify-end': !isXSmall}" routerLink="/configurator"><fa-icon [icon]="faSliders"></fa-icon><span
-        *ngIf="!isXSmall" class="text-large">
+        *ngIf="!isXSmall">
         Configurator</span></a>
 
-    <h1 class="volvo-logo">VOLVO</h1>
+    <h2 class="volvo-logo">VOLVO</h2>
 
-    <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}" class="text-large"
-      routerLink="/profile/{{username}}"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall" class="text-large">
+    <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}"
+      routerLink="/profile/{{username}}"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall">
         Profile</span></a>
 
     <ng-template #elseBlock>
-      <p [ngClass]="{'justify-start': !isXSmall}" class="text-large"><fa-icon [icon]="faIdBadge"></fa-icon><span
-          *ngIf="!isXSmall" class="text-large">
+      <p [ngClass]="{'justify-start': !isXSmall}"><fa-icon [icon]="faIdBadge"></fa-icon><span *ngIf="!isXSmall">
           Register</span></p>
     </ng-template>
 
