--- a/frontend/src/app/pages/public/landing/landing.component.html
+++ b/frontend/src/app/pages/public/landing/landing.component.html
@@ -1,34 +1,27 @@
 <app-header></app-header>
 
 <article>
-
   <!-- Opener -->
   <section>
-    <header [ngClass]="{'container': !isSmall}" class="text">
+    <header [ngClass]="{'container': !isSmall}">
       <h1>S90</h1>
-      <h3 *ngIf="!isSmall">Elegance<br>& Class</h3>
+      <h2 *ngIf="!isSmall">Elegance<br>& Class</h2>
     </header>
     <div id="img-wrapper">
-      <img id="side-on-image" src="../../../../assets/4k-side-on.jpg" alt="Picture of Volvo S90 side view">
+      <img id="side-on-image" src="../../../../assets/background/4k-side-on.jpg" alt="Picture of Volvo S90 side view">
     </div>
   </section>
 
-  <!-- Photos with animation -->
-  <section [ngClass]="{'container': !isSmall}" class="text">
-    <div id="gallery-wrapper">
-      <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{'max-width': '100%'}"
-        [numVisible]="3" [circular]="true" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true">
-        <ng-template pTemplate="item" let-item>
-          <img [src]="item.previewImageSrc" [alt]="item.alt" [title]="item.title" style="width: 100%;" />
-        </ng-template>
+  <!-- Gallery and features -->
+  <section id="showcase" [ngClass]="{'container grid showcase-grid': !isSmall}">
+    <app-gallery [images]="images"></app-gallery>
+    <app-features></app-features>
+  </section>
 
-        <ng-template pTemplate="thumbnail" let-item width="50%">
-          <div class="grid  grid-nogutter justify-content-center">
-            <img [src]="item.thumbnailImageSrc" [alt]="item.alt" [title]="item.title" width=80% />
-          </div>
-        </ng-template>
-      </p-galleria>
-    </div>
+
+  <!-- Specs -->
+  <section id="specifications" [ngClass]="{'container': !isSmall}">
+    <app-specifications></app-specifications>
   </section>
 
 
