--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,15 +4,12 @@
   padding: 0;
   margin: 0;
   font-family: Nobel, Arial, sans-serif;
+  color: white;
 }
 
 a {
   color: inherit;
   text-decoration: inherit;
-}
-
-.text {
-  color: white;
 }
 
 .text-large {
@@ -31,6 +28,7 @@ a {
   align-items: center;
 }
 
+// May remove from here after all...
 .justify-end {
   justify-self: end;
 }
