--- a/frontend/src/app/components/landing/specifications/specifications.component.html
+++ b/frontend/src/app/components/landing/specifications/specifications.component.html
@@ -1,7 +1,7 @@
 <div id="specification-wrapper" [ngClass]="{'small-screen': isSmall}">
   <h3>Specifications</h3>
 
-  <div class="accordian-wrapper">
+  <div id="accordian-wrapper">
     <p-accordion>
       <p-accordionTab header="Performance">
         <p-table [value]="performanceSpecs" styleClass="p-datatable-striped" responsiveLayout="scroll">
