--- a/frontend/src/app/pages/public/landing/landing.component.html
+++ b/frontend/src/app/pages/public/landing/landing.component.html
@@ -24,7 +24,10 @@
     <app-specifications></app-specifications>
   </section>
 
-
+  <!-- Configuratior animations -->
+  <section id="configuratior-animations" [ngClass]="{'container': !isSmall}">
+    <app-configurator-animations></app-configurator-animations>
+  </section>
 </article>
 
 <app-footer></app-footer>
