--- a/frontend/src/app/pages/public/landing/landing.component.scss
+++ b/frontend/src/app/pages/public/landing/landing.component.scss
@@ -34,9 +34,11 @@ header {
   }
 }
 
-// Gallery styling
+// Section styling
 
-#showcase {
+#showcase,
+#specifications,
+#configuratior-animations {
   margin-bottom: 3%;
 }
 
