--- a/frontend/src/app/components/landing/features/features.component.html
+++ b/frontend/src/app/components/landing/features/features.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'small-screen': isSmall}">
   <h3>Features</h3>
 
-  <div class="accordian-wrapper">
+  <div id="accordian-wrapper">
     <p-accordion>
       <p-accordionTab header="Header I" [selected]="true">
         <div class="grid">
@@ -37,6 +37,17 @@
         </div>
       </p-accordionTab>
       <p-accordionTab header="Header IV">
+        <div class="grid">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit
+          </p>
+          <img src="../../../../assets/showcase/1080p-evening-bridge.jpg" alt="">
+        </div>
+      </p-accordionTab>
+      <p-accordionTab header="Coming Soon">
         <div class="grid">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
