--- a/frontend/src/app/components/shared/header/header.component.scss
+++ b/frontend/src/app/components/shared/header/header.component.scss
@@ -38,12 +38,16 @@
 
 .grid {
   grid-template-columns: 1.2fr 1fr 1.2fr;
-  gap: 5%;
 }
 
-.volvo-logo {
-  font-family: Clarendon BT;
-  letter-spacing: 0.4cm;
-  margin-right: -0.4cm;
-  font-size: 2.5rem;
+.text-large {
+  font-size: large;
+}
+
+.justify-end {
+  justify-self: end;
+}
+
+.justify-start {
+  justify-self: start;
 }
