--- a/frontend/src/app/components/shared/register/register.component.html
+++ b/frontend/src/app/components/shared/register/register.component.html
@@ -1,11 +1,33 @@
-<h2>Register</h2>
+<!-- Register button to open sidebar -->
+<p (click)="display = true"><fa-icon [icon]="faIdBadge"></fa-icon><span *ngIf="!isXSmall">
+    Register</span></p>
 
-<form (ngSubmit)="onRegisterSubmit()" #registerform="ngForm">
-  <div>
-    <p>Enter a username</p>
-    <input type="text" name="username" ngModel>
-    <p>Enter a password</p>
-    <input type="password" name="password" ngModel>
+<!-- Sidebar -->
+<p-sidebar [(visible)]="display" position="right" [baseZIndex]="1">
+  <div id="sidebar-content">
+    <h3>Register</h3>
+
+    <form (ngSubmit)="onRegisterSubmit()" #registerform="ngForm">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+        <input type="text" class="p-inputtext-lg" pInputText placeholder="Username" name="username" ngModel>
+      </div>
+
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+        <input type="password" class="p-inputtext-lg" pInputText placeholder="Password" name="password" ngModel>
+      </div>
+
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+        <input type="password" class="p-inputtext-lg" pInputText placeholder="Re-enter password" name="password2"
+          ngModel>
+      </div>
+
+      <p-button type="submit" label="Register"></p-button>
+    </form>
+
+    <p *ngIf="errorMsg">Hello {{errorMsg}}</p>
+
   </div>
-  <button style="margin-top: 20px;" type="submit">Register</button>
-</form>
+</p-sidebar>
