--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Resets
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,6 +14,7 @@ a {
   text-decoration: inherit;
 }
 
+// Formatting content
 h3 {
   font-size: 3rem;
   margin: 3% 0;
@@ -22,6 +25,7 @@ img {
   max-width: 100%;
 }
 
+// Sizing
 .container {
   height: 100%;
   width: 80%;
@@ -41,6 +45,11 @@ img {
   }
 }
 
+// PrimeNG components styling
 .p-link:focus {
   box-shadow: none !important;
+}
+
+.p-sidebar-mask {
+  z-index: 0 !important;
 }
