--- a/frontend/src/app/components/shared/register/register.component.html
+++ b/frontend/src/app/components/shared/register/register.component.html
@@ -1,33 +1,68 @@
-<!-- Register button to open sidebar -->
-<p (click)="display = true"><fa-icon [icon]="faIdBadge"></fa-icon><span *ngIf="!isXSmall">
-    Register</span></p>
+<section *ngIf="!displayLogin; else elseBlock">
 
-<!-- Sidebar -->
-<p-sidebar [(visible)]="display" position="right" [baseZIndex]="4">
-  <div id="sidebar-content">
-    <h3>Register</h3>
+  <!-- Register button to open sidebar -->
+  <p (click)="displaySidebar = true"><fa-icon [icon]="faIdBadge"></fa-icon><span *ngIf="!isXSmall">
+      Register</span></p>
 
-    <form (ngSubmit)="onRegisterSubmit()" #registerform="ngForm">
-      <div class="p-inputgroup">
-        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-        <input type="text" class="p-inputtext-lg" pInputText placeholder="Username" name="username" ngModel>
-      </div>
+  <!-- Sidebar -->
+  <p-sidebar [(visible)]="displaySidebar" position="right" [baseZIndex]="1" styleClass="p-sidebar-md"
+    [ngClass]="isSmall ? 'small-screen' : 'large-screen'">
+    <div id="sidebar-content">
+      <h3>Register <a (click)="displayLoginClick()">Log in</a></h3>
 
-      <div class="p-inputgroup">
-        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-        <input type="password" class="p-inputtext-lg" pInputText placeholder="Password" name="password" ngModel>
-      </div>
+      <form (ngSubmit)="onRegisterSubmit()" #registerform="ngForm">
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+          <input type="text" class="p-inputtext-lg" pInputText placeholder="Username" name="username" ngModel required>
+        </div>
 
-      <div class="p-inputgroup">
-        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-        <input type="password" class="p-inputtext-lg" pInputText placeholder="Re-enter password" name="password2"
-          ngModel>
-      </div>
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+          <input type="password" class="p-inputtext-lg" pInputText placeholder="Password" name="password" ngModel
+            required>
+        </div>
 
-      <div id="btn-wrapper"><p-button type="submit" styleClass="p-button-lg" label="Register"></p-button></div>
-    </form>
+        <div class="p-inputgroup">
+          <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+          <input type="password" class="p-inputtext-lg" pInputText placeholder="Re-enter password" name="password2"
+            ngModel required>
+        </div>
 
-    <p *ngIf="errorMsg">Hello {{errorMsg}}</p>
+        <div id="dealership-input-wrapper" class="grid">
 
-  </div>
-</p-sidebar>
+          <p id="dropdown-label">Select your preferred dealership</p>
+
+          <p-dropdown [options]="dealerships" optionLabel="location" name="prefDealer" [(ngModel)]="currentlySelected"
+            placeholder="Select your preferred dealership"></p-dropdown>
+
+
+          <div id="map-wrapper" [ngSwitch]="currentlySelected.location">
+
+            <iframe *ngSwitchCase="'Greenlane'" style="border:0" loading="lazy" allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtkqG7prsegmfnYDfUoqAlCfdtOxHYQuc
+          &q=-36.893870, 174.799226">
+            </iframe>
+
+            <iframe *ngSwitchCase="'North Shore'" width="450" height="320" style="border:0" loading="lazy"
+              allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtkqG7prsegmfnYDfUoqAlCfdtOxHYQuc
+          &q=-36.778531, 174.746149">
+            </iframe>
+
+            <iframe *ngSwitchCase="'Botany'" width="450" height="320" style="border:0" loading="lazy" allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtkqG7prsegmfnYDfUoqAlCfdtOxHYQuc
+          &q=-36.927326, 174.898395">
+            </iframe>
+
+          </div>
+        </div>
+
+        <label id="error" *ngIf="errorMsg">{{errorMsg}}</label>
+
+        <button type="submit" class="btn">Register</button>
+      </form>
+
+    </div>
+  </p-sidebar>
+</section>
+
+<ng-template #elseBlock><app-login></app-login></ng-template>
