--- a/frontend/src/app/components/landing-page-components/customisation/customisation.component.html
+++ b/frontend/src/app/components/landing-page-components/customisation/customisation.component.html
@@ -3,8 +3,7 @@
 
   <div id="customisation-wrapper" class="grid">
     <div>
-      <img class="exterior-shadow g-area" src="../../../../assets/photos/configurator-animation/Volvo-S90-red.png"
-        alt="">
+      <img class="exterior-shadow g-area" src="../../../../assets/photos/landing-carousel/Volvo-S90-red.png" alt="">
     </div>
     <div class="g-area">
       <p-carousel [value]="images" styleClass="custom-carousel" [numVisible]="1" [numScroll]="1" [circular]="true"
