--- a/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
+++ b/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
@@ -1,1 +1,13 @@
-<p>configurator works!</p>
+<app-header></app-header>
+
+<!-- Intro -->
+<article>
+  <section>
+    <app-ext-color></app-ext-color>
+    <div></div>
+  </section>
+</article>
+
+<app-footer></app-footer>
+
+<!-- https://ik.imagekit.io/h0s40k5ceq/photos/cloudimage/" -->
