three sixty complete

--- a/frontend/src/app/components/configurator-page-components/ext-color/ext-color.component.scss
+++ b/frontend/src/app/components/configurator-page-components/ext-color/ext-color.component.scss
@@ -1,3 +1,9 @@
-#gallery-wrapper {
-  width: 50%;
+.grid {
+  grid-template-columns: 2fr 1fr;
+}
+
+.small-screen {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
