--- a/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
+++ b/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <!-- Intro -->
-<article>
+<article [ngClass]="{'container': !isSmall}">
   <section>
     <app-ext-color></app-ext-color>
     <div></div>
