--- a/frontend/src/app/components/configurator-page-components/ext-color/ext-color.component.html
+++ b/frontend/src/app/components/configurator-page-components/ext-color/ext-color.component.html
@@ -1,18 +1,10 @@
 <div [ngClass]="{'small-screen': isSmall}">
-  <h3>Gallery</h3>
-
-  <div id="gallery-wrapper">
-    <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{'max-width': '100%'}"
-      [circular]="true" [showItemNavigators]="true" [showThumbnails]="false">
-      <ng-template pTemplate="item" let-image>
-        <img [src]="path+image.previewImageSrc" [alt]="image.alt" [title]="image.title" style="width: 100%;" />
-      </ng-template>
-
-      <ng-template pTemplate="thumbnail" let-image width="50%">
-        <div class="grid  grid-nogutter justify-content-center">
-          <img [src]="path+image.thumbnailImageSrc" [alt]="image.alt" [title]="image.title" width=80% />
-        </div>
-      </ng-template>
-    </p-galleria>
+  <h3>Exterior Colour</h3>
+  <div class="grid">
+    <app-ext-three-sixty [colour]="colour"></app-ext-three-sixty>
+    <button (click)="update()">CLICK</button>
   </div>
 </div>
+
+<!-- https://scaleflex.cloudimg.io/v7/demo/suv-orange-car-360/ -->
+<!-- https://ik.imagekit.io/h0s40k5ceq/photos/cloudimage/ -->
