Updated all image jsons to cdn

--- a/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
+++ b/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
@@ -3,8 +3,8 @@
 <!-- Intro -->
 <article [ngClass]="{'container': !isSmall}">
   <section>
-    <app-ext-color></app-ext-color>
-
+    <app-ext-colour-picker></app-ext-colour-picker>
+    <app-int-colour-picker></app-int-colour-picker>
     <div></div>
   </section>
 </article>
