--- a/frontend/src/app/components/landing-page-components/backdrop/backdrop.component.html
+++ b/frontend/src/app/components/landing-page-components/backdrop/backdrop.component.html
@@ -3,6 +3,6 @@
   <h2 *ngIf="!isSmall">Elegance<br>& Class</h2>
 </header>
 <div id="img-wrapper">
-  <img id="side-on-image" src="../../../../assets/photos/background/4k-side-on.jpg"
+  <img id="side-on-image" src="https://ik.imagekit.io/h0s40k5ceq/photos/background/4k-side-on.jpg"
     alt="Picture of Volvo S90 side view">
 </div>
