Links to profile page

--- a/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
+++ b/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.html
@@ -1,11 +1,15 @@
 <app-header></app-header>
 
 <!-- Intro -->
-<article [ngClass]="{'container': !isSmall}">
+<article>
   <section>
     <app-ext-colour-picker></app-ext-colour-picker>
-    <app-int-colour-picker></app-int-colour-picker>
-    <div></div>
+  </section>
+  <section>
+    <app-int-trim-picker></app-int-trim-picker>
+  </section>
+  <section>
+    <app-accessories></app-accessories>
   </section>
 </article>
 
