--- a/frontend/src/app/components/configurator-page-components/ext-colour-picker/ext-colour-picker.component.html
+++ b/frontend/src/app/components/configurator-page-components/ext-colour-picker/ext-colour-picker.component.html
@@ -1,18 +1,19 @@
-<div [ngClass]="{'small-screen': isSmall}">
+<div [ngClass]="{'container' : !isSmall, 'small-screen': isSmall, 'xsmall-screen': isXSmall}">
   <h3>Exterior Options</h3>
 
   <div id="colour-picker-wrapper" class="grid">
     <app-ext-three-sixty [colour]="colour"></app-ext-three-sixty>
 
     <div id="list-wrapper">
+      <h4>Currently: <i>{{colour}}</i></h4>
+
       <ul>
-        <li>Sonic Red</li>
-        <li>Frost White</li>
-        <li>Sudo Black</li>
-        <li>Gunmetal Silver</li>
+        <li (click)="updateColour('Sonic Red')">Sonic Red</li>
+        <li (click)="updateColour('Frost White')">Frost White</li>
+        <li (click)="updateColour('Sudo Black')">Sudo Black</li>
+        <li (click)="updateColour('Gunmetal Silver')">Gunmetal Silver</li>
       </ul>
 
-      <h4>Currently: <i>Sonic {{colour}}</i></h4>
     </div>
   </div>
 </div>
