--- a/frontend/src/app/components/configurator-page-components/int-trim-picker/int-trim-picker.component.scss
+++ b/frontend/src/app/components/configurator-page-components/int-trim-picker/int-trim-picker.component.scss
@@ -1,24 +1,25 @@
-// Exterior Options layout
 .grid {
-  grid-template-columns: 2fr 1fr;
-  height: fit-content;
-}
-
-#colour-picker-wrapper {
-  padding-bottom: 5%;
+  grid-template-columns: 1fr 2fr;
 }
 
 // Colour selection UI
 #list-wrapper {
   width: 100%;
+  height: 100%;
+}
+
+p {
+  margin-bottom: 35px;
+  padding-right: 5%;
 }
 
 h4 {
+  font-size: 1.5rem;
   margin-bottom: 15px;
   font-weight: lighter;
-  font-size: 1.5rem;
 }
 
+// Could do in line style for loop -> turning this into a component
 ul {
   list-style-type: none;
   margin: 0;
@@ -52,10 +53,14 @@ ul {
   }
 }
 
-// Small screen styling
 .small-screen {
+  h3 {
+    padding-left: 5%;
+  }
+
   .grid {
     grid-template-columns: 1fr;
+    gap: 0;
   }
 
   #list-wrapper {
@@ -72,5 +77,9 @@ ul {
 .xsmall-screen {
   ul {
     grid-template-columns: 1fr;
+  }
+
+  p {
+    margin-top: 15px;
   }
 }
