--- a/frontend/src/app/components/shared-components/footer/footer.component.html
+++ b/frontend/src/app/components/shared-components/footer/footer.component.html
@@ -11,14 +11,12 @@
       <a routerLink="/configurator"><fa-icon [icon]="faSliders"></fa-icon><span>
           Configurator</span></a>
 
-      <a *ngIf="loggedIn else elseBlock" routerLink="/profile/{{username}}"><fa-icon [icon]="faUser"></fa-icon><span>
+      <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}"
+        routerLink="/profile/{{username}}"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall">
           Profile</span></a>
 
       <ng-template #elseBlock>
-        <div>
-          <app-register></app-register>
-        </div>
-
+        <app-register [ngClass]="{'justify-start': !isXSmall}"></app-register>
       </ng-template>
     </div>
 
