--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -17,7 +17,7 @@ a {
 // Formatting content
 h3 {
   font-size: 3rem;
-  margin: 3% 0;
+  margin: 25px 0;
   font-weight: lighter;
 }
 
@@ -57,3 +57,12 @@ img {
   position: relative !important;
   z-index: 0 !important;
 }
+
+.p-dropdown {
+  width: 100% !important;
+  position: relative !important;
+}
+
+// .p-dropdown-items {
+//   position: absolute !important;
+// }
