Basic animations and error page

--- a/frontend/src/app/components/configurator-page-components/ext-three-sixty/ext-three-sixty.component.html
+++ b/frontend/src/app/components/configurator-page-components/ext-three-sixty/ext-three-sixty.component.html
@@ -7,7 +7,7 @@
   </p-galleria>
 
   <div class="grid">
-    <fa-icon [icon]="faBackward" (click)="rotateRight()"></fa-icon>
-    <fa-icon [icon]="faForward" (click)="rotateLeft()"></fa-icon>
+    <fa-icon [icon]="faBackward" (click)="rotateRight()" class="scale-animation"></fa-icon>
+    <fa-icon [icon]="faForward" (click)="rotateLeft()" class="scale-animation"></fa-icon>
   </div>
 </div>
