--- a/frontend/src/app/components/configurator-page-components/int-trim-picker/int-trim-picker.component.html
+++ b/frontend/src/app/components/configurator-page-components/int-trim-picker/int-trim-picker.component.html
@@ -1,17 +1,17 @@
 <div [ngClass]="{'container' : !isSmall, 'small-screen': isSmall, 'xsmall-screen': isXSmall}">
-  <h3>Interior Options</h3>
+  <h3>Trim Options</h3>
 
   <div class="grid" id="trim-picker-wrapper">
     <div id="list-wrapper">
       <p>Our interior is hand woven leather stuff with suade and stuff</p>
 
       <div>
-        <h4>Currently: <i>{{colour}}</i></h4>
+        <h4>Currently: <i>{{trim}}</i></h4>
 
         <ul>
-          <li (click)="updateColour('Black')">Black</li>
-          <li (click)="updateColour('Beige')">Beige</li>
-          <li (click)="updateColour('Two-Tone')">Two-Tone</li>
+          <li (click)="updateTrim('Black')">Black</li>
+          <li (click)="updateTrim('Beige')">Beige</li>
+          <li (click)="updateTrim('Two-Tone')">Two-Tone</li>
         </ul>
       </div>
 
