--- a/frontend/src/app/components/shared-components/header/header.component.html
+++ b/frontend/src/app/components/shared-components/header/header.component.html
@@ -6,14 +6,14 @@
   <!-- Nav options -->
   <nav [ngClass]="{'container': !isSmall}" class="grid text-large">
 
-    <a [ngClass]="{'justify-end': !isXSmall}" routerLink="/configurator"><fa-icon [icon]="faSliders"></fa-icon><span
-        *ngIf="!isXSmall">
+    <a [ngClass]="{'justify-end': !isXSmall}" routerLink="/configurator" class="scale-animation"><fa-icon
+        [icon]="faSliders"></fa-icon><span *ngIf="!isXSmall">
         Configurator</span></a>
 
     <app-volvo-logo></app-volvo-logo>
 
-    <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}"
-      routerLink="/profile/{{username}}"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall">
+    <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}" routerLink="/profile/{{username}}"
+      class="scale-animation"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall">
         Profile</span></a>
 
     <ng-template #elseBlock>
