--- a/frontend/src/app/components/shared-components/header/header.component.html
+++ b/frontend/src/app/components/shared-components/header/header.component.html
@@ -12,12 +12,16 @@
 
     <app-volvo-logo></app-volvo-logo>
 
-    <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}" routerLink="/profile/{{username}}"
-      class="scale-animation"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall">
-        Profile</span></a>
+    <app-logout *ngIf="protected else elseBlock" [ngClass]="{'justify-start': !isXSmall}"></app-logout>
 
     <ng-template #elseBlock>
-      <app-register [ngClass]="{'justify-start': !isXSmall}"></app-register>
+      <a *ngIf="loggedIn else elseBlock" [ngClass]="{'justify-start': !isXSmall}" routerLink="/profile/{{username}}"
+        class="scale-animation"><fa-icon [icon]="faUser"></fa-icon><span *ngIf="!isXSmall">
+          Profile</span></a>
+
+      <ng-template #elseBlock>
+        <app-register [ngClass]="{'justify-start': !isXSmall}"></app-register>
+      </ng-template>
     </ng-template>
 
   </nav>
