--- a/frontend/src/app/components/shared-components/register/register.component.html
+++ b/frontend/src/app/components/shared-components/register/register.component.html
@@ -7,7 +7,7 @@
 
   <!-- Sidebar -->
   <p-sidebar [(visible)]="displaySidebar" position="right" [baseZIndex]="1" styleClass="p-sidebar-md"
-    [ngClass]="isSmall ? 'small-screen' : 'large-screen'">
+    [ngClass]="{'small-screen': isSmall }">
     <div id="sidebar-content">
       <h3>Register <a (click)="displayLoginClick()">Log in</a></h3>
 
@@ -29,33 +29,7 @@
             ngModel required>
         </div>
 
-        <div id="dealership-input-wrapper" class="grid">
-
-          <p id="dropdown-label">Select your preferred dealership</p>
-
-          <p-dropdown [options]="dealerships" optionLabel="location" name="prefDealer" [(ngModel)]="currentlySelected"
-            placeholder="Select your preferred dealership"></p-dropdown>
-
-          <!-- Google API key can only be used with embeded maps API, which is free anyway -->
-          <div id="map-wrapper" [ngSwitch]="currentlySelected.location">
-
-            <iframe *ngSwitchCase="'Greenlane'" style="border:0" loading="lazy" allowfullscreen
-              referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtkqG7prsegmfnYDfUoqAlCfdtOxHYQuc
-          &q=-36.893870, 174.799226">
-            </iframe>
-
-            <iframe *ngSwitchCase="'North Shore'" width="450" height="320" style="border:0" loading="lazy"
-              allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtkqG7prsegmfnYDfUoqAlCfdtOxHYQuc
-          &q=-36.778531, 174.746149">
-            </iframe>
-
-            <iframe *ngSwitchCase="'Botany'" width="450" height="320" style="border:0" loading="lazy" allowfullscreen
-              referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtkqG7prsegmfnYDfUoqAlCfdtOxHYQuc
-          &q=-36.927326, 174.898395">
-            </iframe>
-
-          </div>
-        </div>
+        <app-dealership-input (prefDealerEvent)="updatePrefDealer($event)"></app-dealership-input>
 
         <label id="error" *ngIf="errorMsg">{{errorMsg}}</label>
 
