update profile details complete

--- a/frontend/src/app/pages/protected-pages/profile-page/profile.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/profile.component.html
@@ -5,6 +5,9 @@
     <app-profile-details></app-profile-details>
   </section>
 
+  <section>
+    <app-list-cars></app-list-cars>
+  </section>
 </article>
 
 <app-footer></app-footer>
