--- a/frontend/src/app/pages/protected-pages/profile-page/profile.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/profile.component.html
@@ -2,7 +2,7 @@
 
 <article [ngClass]="{'container': !isSmall}">
   <section>
-    <app-profile-details></app-profile-details>
+    <app-details></app-details>
   </section>
 
   <section>
