--- a/frontend/src/app/pages/protected-pages/profile-page/components/details/details.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/details/details.component.html
@@ -1,11 +1,8 @@
-<p-card>
-  <div id="details-wrapper">
-    <h2>Hello {{username}}</h2>
-    <p>Preferred dealership: {{currentPrefDealer}}</p>
-
+<div id="details-wrapper">
+  <h2>Hello {{username}}</h2>
+  <div>
+    <h4>Preferred dealership: {{currentPrefDealer}}</h4>
     <app-edit-profile [currentPrefDealer]="currentPrefDealer"
       (newDetailsEvent)="updateDetails($event)"></app-edit-profile>
-
   </div>
-
-</p-card>
+</div>
