--- a/frontend/src/app/pages/public-pages/configurator-page/components/ext-colour-picker/ext-colour-picker.component.html
+++ b/frontend/src/app/pages/public-pages/configurator-page/components/ext-colour-picker/ext-colour-picker.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{'container' : !isSmall, 'small-screen': isSmall, 'xsmall-screen': isXSmall}">
-  <h3>Colour Options</h3>
+  <h3>Exterior</h3>
 
   <div id="colour-picker-wrapper" class="grid">
     <app-ext-three-sixty [colour]="colour"></app-ext-three-sixty>
