--- a/frontend/src/app/pages/public-pages/configurator-page/components/int-trim-picker/int-trim-picker.component.html
+++ b/frontend/src/app/pages/public-pages/configurator-page/components/int-trim-picker/int-trim-picker.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{'container' : !isSmall, 'small-screen': isSmall, 'xsmall-screen': isXSmall}">
-  <h3>Trim Options</h3>
+  <h3>Interior Trim</h3>
 
   <div class="grid" id="trim-picker-wrapper">
     <div id="list-wrapper">
