--- a/frontend/src/app/pages/protected-pages/profile-page/components/details/details.component.scss
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/details/details.component.scss
@@ -1,5 +1,10 @@
-#details-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+h2 {
+  font-weight: lighter;
+  font-size: 2rem;
+}
+
+#details-wrapper > div {
+  width: min(400px);
+  display: grid;
+  grid-template-columns: 3fr 1fr;
 }
