--- a/frontend/src/app/pages/protected-pages/profile-page/components/edit-profile/edit-profile.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/edit-profile/edit-profile.component.html
@@ -1,5 +1,5 @@
 <!-- Register button to open sidebar -->
-<p (click)="displaySidebar = true" class="scale-animation"><fa-icon [icon]="faPenToSquare"></fa-icon><span
+<p id="trigger" (click)="displaySidebar = true" class="scale-animation"><fa-icon [icon]="faPenToSquare"></fa-icon><span
     *ngIf="!isXSmall">
     Edit details</span></p>
 
@@ -11,14 +11,15 @@
 
     <form (ngSubmit)="onUpdateSubmit()" #updateform="ngForm">
 
-      <p>Your current username is {{username}}. If you would like to update it, please enter a new one below</p>
+      <p>Your current username is <b>{{username}}</b>. If you would like to update it, please enter a new one below</p>
       <div class="p-inputgroup">
         <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
         <input type="text" class="p-inputtext-lg" pInputText placeholder="{{username}}" name="username" ngModel
           required>
       </div>
 
-      <p>Your current preferred dealership is {{currentPrefDealer}}. If you would like to update it, please select a new
+      <p>Your current preferred dealership is <b>{{currentPrefDealer}}</b>. If you would like to update it, please
+        select a new
         one below
       </p>
 
