--- a/frontend/src/app/pages/protected-pages/profile-page/components/list-cars/list-cars.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/list-cars/list-cars.component.html
@@ -1,13 +1,29 @@
-<p>list-cars works!</p>
-<!-- <button (click)="listCars()">List cars</button> -->
-<p>{{cars}}</p>
+<h3>Your saved cars</h3>
+
 <ul>
-  <li *ngFor="let item of cars; let index = index">
-    <p>https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{item.colour}}/1</p>
-    {{item.colour}}, {{item.trim}}, {{item.accessories}}, {{item._id}}
+  <li *ngFor="let car of cars; let index = index">
+    <p-card header="header">
+      <div class="grid">
+        <!-- <p>https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{item.colour}}/1</p> -->
+        <img src="../../../../../../assets/photos/gallery/1080p-architecture.jpg" alt="">
+        {{car.colour}}, {{car.trim}}, {{car._id}}, {{car.options}}
 
-    <button (click)="updateCar(index, item)">Update car {{index}}</button>
+        <div>
+          <ul *ngFor="let accessory of car.options; let index = index">
+            <span>{{accessory.value}}</span>
+          </ul>
+          <app-edit-accessories [selectedAccessories]="car.options"></app-edit-accessories>
+        </div>
 
-    <button (click)="deleteCar(index)">Delete car</button>
+        <div class="flex">
+          <button id="update-btn" pButton pRipple type="button" label="Update" icon="pi pi-check"
+            class="p-button-rounded" (click)="updateCar(index, car)"></button>
+
+          <button id="delete-btn" pButton pRipple type="button" label="Delete" icon="pi pi-times"
+            class="p-button-rounded" (click)="deleteCar(index)"></button>
+        </div>
+      </div>
+    </p-card>
+
   </li>
 </ul>
